# Sim2D_Visual

./: CMakeLists.txt  README.md
include/hv/: color.hpp  heat.hpp  life.hpp  wave.hpp
src/: main.cpp
